--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -5,8 +5,9 @@ FROM alpine:3.5
 # * git is needed to install ide image configs
 # For releaser:
 # * coreutils is needed for sort to have -V option
+# * openssh is needed for "releaser release" command (to git push)
 RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/community" >> /etc/apk/repositories && \
-  apk add --no-cache bash shadow sudo git coreutils curl && \
+  apk add --no-cache bash shadow sudo git coreutils curl openssh && \
   git clone --depth 1 -b 0.7.3 https://github.com/ai-traders/ide.git /tmp/ide_git && \
   /tmp/ide_git/ide_image_scripts/src/install.sh && \
   rm -r /tmp/ide_git && \
