--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -12,7 +12,7 @@ pipelines:
       - test:
           clean_workspace: true
           jobs:
-            validate_repo:
+            verify_version:
               resources:
                 - docker
                 - small
@@ -55,3 +55,16 @@ pipelines:
                     arguments:
                       - -c
                       - ./tasks release
+      - publish:
+          clean_workspace: true
+          jobs:
+            code:
+              resources:
+                - docker
+                - small
+              tasks:
+                - exec:
+                    command: /bin/bash
+                    arguments:
+                      - -c
+                      - ./tasks publish
