--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -13,30 +13,18 @@ pipelines:
           clean_workspace: true
           jobs:
             verify_version:
-              resources:
-                - docker
-                - small
+              elastic_profile_id: w.c2.m2048.e10
               tasks:
                 - exec:
                     command: /bin/bash
                     arguments:
                       - -c
                       - ./tasks verify_version
-            unit:
-              resources:
-                - docker
-                - small
-              tasks:
                 - exec:
                     command: bash
                     arguments:
                       - -c
                       - ./tasks unit
-            itest:
-              resources:
-                - docker
-                - small
-              tasks:
                 - exec:
                     command: bash
                     arguments:
@@ -46,9 +34,7 @@ pipelines:
           clean_workspace: true
           jobs:
             code:
-              resources:
-                - docker
-                - small
+              elastic_profile_id: w.c2.m2048.e10
               tasks:
                 - exec:
                     command: /bin/bash
@@ -59,9 +45,7 @@ pipelines:
           clean_workspace: true
           jobs:
             code:
-              resources:
-                - docker
-                - small
+              elastic_profile_id: w.c2.m2048.e10
               tasks:
                 - exec:
                     command: /bin/bash
