--- a/oversion.yml
+++ b/oversion.yml
@@ -1,4 +1,4 @@
 ---
 backend: 'consul'
-project_name: 'docker-releaser'
+project_name: 'releaser'
 consul_url: 'http://consul.service.mosk.consul.ai-traders.com:8500'
