--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -12,14 +12,9 @@ pipelines:
       - test:
           clean_workspace: true
           jobs:
-            verify_version:
+            test:
               elastic_profile_id: w.c1.m1024.e5
               tasks:
-                - exec:
-                    command: /bin/bash
-                    arguments:
-                      - -c
-                      - ./tasks verify_version
                 - exec:
                     command: bash
                     arguments:
@@ -36,6 +31,11 @@ pipelines:
             code:
               elastic_profile_id: w.c1.m1024.e5
               tasks:
+                - exec:
+                    command: /bin/bash
+                    arguments:
+                      - -c
+                      - ./tasks verify_version
                 - exec:
                     command: /bin/bash
                     arguments:
