--- a/pipeline.gocd.yaml
+++ b/pipeline.gocd.yaml
@@ -4,8 +4,7 @@ pipelines:
     label_template: "${git[:8]}"
     materials:
       git:
-        git: "git@git.ai-traders.com:platform/releaser.git"
-        branch: master
+        type: configrepo
         blacklist:
           - "**/*.md"
     stages:
